# agencia-IA

./: .coverage  .dockerignore  .env.example  .env.local  .fabricamode  .gitignore  CREAR_EXPANSION_PLAN.txt  DASHBOARD_SETUP.md  DESARROLLO_LOCAL.md  DIAGNOSTICO_COMPLETO.md  EMPEZAR_AQUI.txt  GUIA_ARRANQUE.txt  GUIA_USAR_CREAR_EXPANSION.txt  INSTRUCCIONES_DASHBOARD.txt  LAUNCHER_MENU.bat  LISTO_PARA_PROBAR.txt  MAPA_DOCUMENTOS.md  MENU_PRIORIDADES.txt  MICROSERVICIOS.md  MIGRACION_GROQ_COMPLETADA.md  MIGRATION_DASHBOARD.md  MIGRATION_GUIDE.md  MIGRATION_REPORT.md  MODO_SELECTOR_DASHBOARD.txt  PLAN_DASHBOARD_MEJORADO.md  PODMAN_SETUP.md  PRUEBA_DASHBOARD.txt  Propuesta_Comercial_2023.json  QUICK_START.txt  README.md  REPORTE_CAMBIOS.md  RESUMEN_CAMBIOS.md  RESUMEN_CONVERSACION.md  RESUMEN_IMPLEMENTACION.txt  RESUMEN_SOLUCION_ARRANQUE.md  STATUS.md  SUPER_AGENTES_SUMMARY.md  TEAMDIRECTOR_SUPER_AGENTE.md  VERIFICAR_INSTALACION.bat  abrir_dashboard.bat  (+328 more)
.vault/: .vault_key  credenciales.enc
data/: alert_config.json
database/: schema.sql
docker/: Dockerfile.api  Dockerfile.app  Dockerfile.celery  Dockerfile.dashboard  Dockerfile.health  Dockerfile.maestro  Dockerfile.streamlit
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD_V2.md  DASHBOARD_V2_SETUP.md  DEPLOYMENT.md  DOCKER_SETUP.md  FRONTEND_SETUP.md  HEALTH_CHECKS.md  LOGGING_SETUP.md  MIGRATION_EXECUTION.md  MONITORING_SETUP.md  README_NEW.md  TRACING_SETUP.md  VALIDATION_CHECKLIST.md
frontend/: Dockerfile
memory_db/: chroma.sqlite3
nginx/: dashboard.conf  nginx.conf
reportes/: due_diligence_20260226_222030.json
runs/: 20260205-003447_Ideas_de_automatización.md  (+4 more)
(+167 files in other folders)
