[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agencia-ia"
version = "1.0.0"
description = "Multi-agent AI system"
requires-python = ">=3.10"

[project.optional-dependencies]
dashboard = ["streamlit>=1.40.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
