[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agencia-ia"
version = "1.0.0"
description = "Multi-agent AI system"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "groq>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    "flask>=3.0.0",
    "cryptography>=42.0.0",
    "twilio>=9.0.0",
    "GPUtil>=1.4.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
